--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: kristapsbezbailis.com
+Theme Name: kristapsbezbailis.com - v2
 Author: Kristaps Bezbailis
 Description: Bootstrap Blog template converted to WordPress
-Version: 1.0
+Version: 2.0
 Tags: bootstrap
 */
 
